# second-brain

./: .env.example  .gitignore  README.md  api.py  firebase_admin_app.py  ingestion.py  knowledge_ai.py  package-lock.json  pyproject.toml  storage.py
backend/: __init__.py  api.py  file_storage.py  ingest.py  ingestion.py  storage.py
backend/routers/: chat.py  misc.py  sources.py
backend/services/: account_service.py  anthropic_client.py  auth_middleware.py  enrichment.py  retrieval.py
backend/services/chat/: __init__.py  evidence.py  llm.py  runner.py  settings.py  tools.py  trace.py
backend/storage_backends/: __init__.py  base.py  firestore.py  memory.py  utils.py
documents/: agent_workflow.md  architectures.md  ingestion_workflow.md  knowledge_graph.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AppNavigation.tsx  ChatPanel.tsx  DigestSourcePage.tsx  GraphView.tsx  HomeView.tsx  IngestSourceDrawer.tsx  IngestSourcePage.tsx  MarkdownView.tsx  NotesView.tsx  PostDrawer.tsx  SourceContent.tsx  StatusBadge.tsx
frontend/src/components/graph/: GraphCanvas.tsx  GraphEdges.tsx  GraphEmptyState.tsx  GraphNodes.tsx  (+3 more)
frontend/src/hooks/: useGraphInteractions.ts  useGraphSimulation.ts  useGraphViewport.ts  useKnowledgeBase.ts  useSourceIngestion.ts
frontend/src/lib/: api.ts  format.ts  graph-layout.ts  navigation.ts
services/: enrichment.py  retrieval.py
services/chat/: llm.py  runner.py  tools.py
storage_backends/: firestore.py  memory.py  utils.py
tests/: test_backend.py
(+10 files in other folders)
